--- a/GR4_app/frontend/src/components/Pages/Styles/InfluencerPage.css
+++ b/GR4_app/frontend/src/components/Pages/Styles/InfluencerPage.css
@@ -52,3 +52,7 @@
   outline: none !important;
   box-shadow: none !important;
 }
+
+.logo {
+  width: 50%;
+}
